# TODOServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CopyBuild.bat  README.md  toolchain.cmake
TODOServer/: CMakeLists.txt
TODOServer/source/: MySQLManager.cpp  MySQLManager.h  TODOServer.cpp  TODOServer.h
